<resources>
    <string name="app_name">SayaraDz</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="google_api_client">AIzaSyC6nIE0otUfgrELLPVfqP_6nD13IsvT68o</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">1070784103094537</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1070784103094537</string>

    <string name="facebook_app_id">834745510246057</string>
    <string name="fb_login_protocol_scheme">fb834745510246057</string>


    <string name="menu_home">Accuille</string>
    <string name="menu_new">Nouveau</string>
    <string name="menu_used">Utilise</string>
    <string name="menu_acount">Compte</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>


    <string name="Plus">Plus</string>
    <string name="brands_title">Marques</string>
    <string name="models_title">Modéles</string>
    <string name="versions_title">Versions</string>
    <string name="most_used">Plus demandés</string>
    <string name="trends_new">Trending Nouveaux</string>
    <string name="trends_used">Trending Utilisé</string>

    <string name="compare_title">Comparaison</string>


    <string name="normal_order_button">Commande Normale</string>
    <string name="accelerated_order_button">Commande Accéléré</string>
    <string name="order_dialog_title">Type de Commande</string>

    <string name="compare_confirm_choice">Confirmer</string>

    <string name="next_compose">Suivant</string>

    <string name="no_internet">Connexion échoué</string>


    <!-- Login Activity Strings  -->
    <string name="google_login">Login avec google</string>
    <string name="facebook_login">Login avec facebook</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- My Account Activity Strings  -->
    <string name="notifs">Mes Notifications</string>
    <string name="announces">Mes Announces</string>
    <string name="fav">Mes Favoris</string>
    <string name="payment">Paiment</string>
    <string name="logout">Logout</string>


    <!-- Image descriptions -->
    <string name="main_view_car_description">automobile blue et une arbre de la méme coleur</string>
    <string name="detail_car_image_description">Image de la version selectioné</string>
    <string name="model_car_image_description">Image de la modéle</string>
    <string name="brand_logo">logo de la marque selectioné</string>

    <string name="color_circle">coleur valuable</string>
    <string name="color_check">signe de color selectioné</string>

    <string name="notifs_icon">Icon de Mes Notifications</string>
    <string name="announces_icnon">Icon de Mes Announces</string>
    <string name="fav_icon">Icon de Mes Favoris</string>
    <string name="payment_icon">Icon de Paiment</string>
    <string name="logout_icon">Icon de Logout</string>
    <string name="follow_icon">Icon de suivie</string>

    <string name="user_pic">Profile d\'utilisateur</string>

    <!-- Details activity -->
    <string name="separator">-</string>


    <!-- Buttons texts -->
    <string name="buy_button">Commander</string>
    <string name="Collection_button">Collection</string>


    <string name="Colors">Coleurs</string>
    <string name="compose_your_car">Composer</string>
    <string name="compare_versions">Comparer</string>


    <!-- Dialog windows titles -->
    <string name="Choose_your_version">choix de version</string>
    <string name="Choose_your_model">choix de modéle</string>
    <string name="compare">Choix des versions</string>

</resources>
