<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".views.fragments.dialog_fragments.OrderDialogFragment"
        android:background="@drawable/dialog_rounded_corners_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/dialog_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/space_16"
            android:layout_marginLeft="@dimen/space_16"
            android:layout_marginRight="@dimen/space_16"
            android:text="@string/order_dialog_title"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/dialog_normal_button"
            app:layout_constraintVertical_chainStyle="spread"/>

    <Button
            android:text="@string/normal_order_button"
            android:fontFamily="@font/roboto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/dialog_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/space_16"
            android:layout_marginRight="@dimen/space_16"
            android:layout_marginLeft="@dimen/space_16"
            android:id="@+id/dialog_normal_button"
            app:cornerRadius="@dimen/space_28"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/next_button"/>

    <Button
            android:text="@string/accelerated_order_button"
            android:fontFamily="@font/roboto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/dialog_normal_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginBottom="@dimen/space_16"
            android:layout_marginRight="@dimen/space_16"
            android:layout_marginLeft="@dimen/space_16"
            android:id="@+id/confirm_button"
            app:cornerRadius="@dimen/space_28"
            app:layout_constraintHorizontal_bias="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>
