<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        tools:context=".views.fragments.myAccount.AccountFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".views.fragments.myAccount.AccountFragment">

        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/space_28"
                android:src="@drawable/car1"
                android:id="@+id/profile_pic"
                android:contentDescription="@string/user_pic"/>
        <TextView
                tools:text="Abderraouf GATTAL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_pic"
                android:layout_marginTop="@dimen/space_16"
                android:fontFamily="@font/roboto_bold"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/full_name"/>
        <TextView
                tools:text="Tebessa, Algeria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/full_name"
                android:layout_marginTop="@dimen/space_8"
                android:fontFamily="@font/roboto"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/city_country"/>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_16"
                android:layout_marginStart="@dimen/space_16"
                android:layout_marginEnd="@dimen/space_16"
                android:layout_marginBottom="@dimen/space_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:cardCornerRadius="@dimen/space_16"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/city_country">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/notifs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space_16"
                        android:layout_marginEnd="@dimen/space_8"
                        android:id="@+id/notificaton"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/notificationIcon"
                        app:layout_constraintBottom_toBottomOf="@id/notificationIcon"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toStartOf="@+id/notificationIcon"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"/>
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="@dimen/space_16"
                        android:layout_marginEnd="@dimen/space_16"
                        android:id="@+id/notificationIcon"
                        app:srcCompat="@drawable/ic_notification"
                        app:layout_constraintStart_toEndOf="@+id/notificaton"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:contentDescription="@string/notifs_icon"/>

                <androidx.constraintlayout.widget.Barrier
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/barrier"
                        app:barrierDirection="bottom"
                        app:constraint_referenced_ids="notificationIcon,notificaton"
                        tools:layout_editor_absoluteY="35dp"/>
                <View
                        android:id="@+id/divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        app:layout_constraintTop_toBottomOf="@id/barrier"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginEnd="@dimen/space_16"
                        android:layout_marginStart="@dimen/space_16"
                        android:layout_marginTop="@dimen/space_8"
                        android:background="@color/colorPrimaryDark"/>

                <TextView
                        android:text="@string/announces"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space_16"
                        android:layout_marginEnd="@dimen/space_8"
                        android:id="@+id/announces"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/announcesIcon"
                        app:layout_constraintBottom_toBottomOf="@id/announcesIcon"
                        app:layout_constraintTop_toBottomOf="@id/divider"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toStartOf="@+id/announcesIcon"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"/>

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_announces"
                        android:layout_marginEnd="@dimen/space_16"
                        android:layout_marginTop="@dimen/space_8"
                        android:id="@+id/announcesIcon"
                        app:layout_constraintTop_toBottomOf="@id/divider"
                        app:layout_constraintStart_toEndOf="@+id/announces"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:layout_editor_absoluteY="17dp"
                        android:contentDescription="@string/announces_icnon"/>

                <androidx.constraintlayout.widget.Barrier
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/barrier1"
                        app:barrierDirection="bottom"
                        tools:layout_editor_absoluteY="184dp"
                        app:constraint_referenced_ids="announces,announcesIcon"/>

                <View
                        android:id="@+id/divider1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        app:layout_constraintTop_toBottomOf="@id/barrier1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginEnd="@dimen/space_16"
                        android:layout_marginStart="@dimen/space_16"
                        android:layout_marginTop="@dimen/space_8"
                        android:background="@color/colorPrimaryDark"/>

                <TextView
                        android:text="@string/fav"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/divider1"
                        android:layout_marginStart="@dimen/space_16"
                        android:layout_marginEnd="@dimen/space_8"
                        android:id="@+id/favorite"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/favoriteIcon"
                        app:layout_constraintBottom_toBottomOf="@id/favoriteIcon"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toStartOf="@+id/favoriteIcon"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"/>
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_favourite"
                        app:layout_constraintTop_toBottomOf="@id/divider1"
                        android:layout_marginTop="@dimen/space_8"
                        android:layout_marginEnd="@dimen/space_16"
                        android:id="@+id/favoriteIcon"
                        app:layout_constraintStart_toEndOf="@+id/favorite"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:contentDescription="@string/fav_icon"/>


                <androidx.constraintlayout.widget.Barrier
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/barrier2"
                        app:barrierDirection="bottom"
                        tools:layout_editor_absoluteY="184dp"
                        app:constraint_referenced_ids="favoriteIcon,favorite"/>

                <View
                        android:id="@+id/divider2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        app:layout_constraintTop_toBottomOf="@id/barrier2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginEnd="@dimen/space_16"
                        android:layout_marginStart="@dimen/space_16"
                        android:layout_marginTop="@dimen/space_8"
                        android:background="@color/colorPrimaryDark"/>


                <TextView
                        android:text="@string/order"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/divider2"
                        android:layout_marginStart="@dimen/space_16"
                        android:layout_marginEnd="@dimen/space_8"
                        android:id="@+id/orders"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/order_icon"
                        app:layout_constraintBottom_toBottomOf="@id/order_icon"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toStartOf="@+id/order_icon"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"/>

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_announces"
                        app:layout_constraintTop_toBottomOf="@id/divider2"
                        android:layout_marginTop="@dimen/space_8"
                        android:layout_marginEnd="@dimen/space_16"
                        android:id="@+id/order_icon"
                        app:layout_constraintStart_toEndOf="@+id/favorite"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:contentDescription="@string/fav_icon"/>


                <androidx.constraintlayout.widget.Barrier
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/barrier5"
                        app:barrierDirection="bottom"
                        tools:layout_editor_absoluteY="184dp"
                        app:constraint_referenced_ids="orders,order_icon"/>

                <View
                        android:id="@+id/divider5"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        app:layout_constraintTop_toBottomOf="@id/barrier5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginEnd="@dimen/space_16"
                        android:layout_marginStart="@dimen/space_16"
                        android:layout_marginTop="@dimen/space_8"
                        android:background="@color/colorPrimaryDark"/>


                <TextView
                        android:text="@string/payment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/divider5"
                        android:layout_marginStart="@dimen/space_16"
                        android:layout_marginEnd="@dimen/space_8"
                        android:id="@+id/paiment"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toStartOf="@+id/paimentIcon"
                        app:layout_constraintTop_toTopOf="@id/paimentIcon"
                        app:layout_constraintBottom_toBottomOf="@id/paimentIcon"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"/>
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_payment"
                        app:layout_constraintTop_toBottomOf="@id/divider5"
                        android:layout_marginTop="@dimen/space_8"
                        android:layout_marginEnd="@dimen/space_16"
                        android:id="@+id/paimentIcon"
                        app:layout_constraintStart_toEndOf="@+id/paiment"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:contentDescription="@string/payment_icon"/>

                <androidx.constraintlayout.widget.Barrier
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/barrier3"
                        app:barrierDirection="bottom"
                        tools:layout_editor_absoluteY="184dp"
                        app:constraint_referenced_ids="paiment,paimentIcon"/>

                <View
                        android:id="@+id/divider3"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        app:layout_constraintTop_toBottomOf="@id/barrier3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginEnd="@dimen/space_16"
                        android:layout_marginStart="@dimen/space_16"
                        android:layout_marginTop="@dimen/space_8"
                        android:background="@color/colorPrimaryDark"/>

                <TextView
                        android:text="@string/logout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/divider3"
                        android:layout_marginStart="@dimen/space_16"
                        android:layout_marginEnd="@dimen/space_8"
                        android:id="@+id/logout"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/logoutIcon"
                        app:layout_constraintTop_toTopOf="@id/logoutIcon"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toStartOf="@+id/logoutIcon"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"/>
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_logout"
                        app:layout_constraintTop_toBottomOf="@id/divider3"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginTop="@dimen/space_8"
                        android:layout_marginEnd="@dimen/space_16"
                        android:layout_marginBottom="@dimen/space_16"
                        android:id="@+id/logoutIcon"
                        app:layout_constraintStart_toEndOf="@+id/logout"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:contentDescription="@string/logout_icon"/>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>