<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".views.fragments.OrderDialogFragment"
        android:background="@drawable/dialog_rounded_corners_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/progressBarDialog"/>

    <TextView
            android:text="@string/no_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="@font/roboto"
            android:textColor="@color/colorPrimaryDark"
            android:visibility="invisible"
            android:id="@+id/no_internet_dialog"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/content_view_Dialog">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/dialog_title_model"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="@dimen/space_16"
                android:layout_marginLeft="@dimen/space_16"
                android:layout_marginRight="@dimen/space_16"
                android:text="@string/order_dialog_title"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toTopOf="@+id/choice_model"
                app:layout_constraintVertical_chainStyle="spread"/>


        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialog_title_model"
                android:layout_marginTop="@dimen/space_8"
                android:paddingStart="@dimen/space_16"
                android:paddingEnd="@dimen/space_16"
                android:overScrollMode="never"
                tools:listitem="@layout/new_cars_main_fragment_brand_item"
                tools:itemCount="6"
                android:id="@+id/choice_model"
                app:layout_constraintBottom_toTopOf="@+id/next_button"/>


        <TextView
                android:text="@string/next_compose"
                android:fontFamily="@font/roboto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/choice_model"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/space_8"
                android:layout_marginBottom="@dimen/space_16"
                android:layout_marginRight="@dimen/space_16"
                android:layout_marginLeft="@dimen/space_16"
                android:textColor="@color/colorPrimaryButton"
                android:textStyle="bold"
                android:textSize="15sp"
                android:id="@+id/next_button"
                android:alpha="0.4"
                android:enabled="false"
                app:cornerRadius="@dimen/space_28"
                app:layout_constraintHorizontal_bias="0.5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
